fixed aside overflow issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -785,6 +785,7 @@ p {
 aside {
   width: 100%;
   visibility: hidden;
+  overflow: hidden;
 }
 
 aside.active {
@@ -832,6 +833,7 @@ aside .overlay {
   background-color: rgba(0, 0, 0, 0.439);
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 
 aside .sidebar-menu {
@@ -843,6 +845,7 @@ aside .sidebar-menu {
   z-index: 15;
   transition: all 0.3s ease-in-out;
   transform: translateX(-100%);
+  overflow-y: auto;
 }
 
 .sidebar-menu {
