--- a/assets/scss/components/_mobileMenu.scss
+++ b/assets/scss/components/_mobileMenu.scss
@@ -1,7 +1,7 @@
 aside {
   width: 100%;
   visibility: hidden;
-
+  overflow: hidden;
   &.active {
     visibility: visible;
 
@@ -48,6 +48,7 @@ aside {
     background-color: rgba(0, 0, 0, 0.439);
     width: 100%;
     height: 100vh;
+    overflow: hidden;
   }
 
   .sidebar-menu {
@@ -59,6 +60,7 @@ aside {
     z-index: 15;
     transition: all 0.3s ease-in-out;
     transform: translateX(-100%);
+    overflow-y: auto;
   }
 }
 .sidebar-menu {
